--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
 
         {{#if filename}}
           <div>
-            <img src='images/{{filename}}' class='card-img' />
+            <img src='https://project2-photo-storage.s3.us-east-2.amazonaws.com/{{filename}}' class='card-img' />
           </div>
         {{/if}}
 
