--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,10 @@
 <div class='container-fluid'>
   <div class='row justify-content-evenly'>
     <div class='login-card col-4'>
-      {{! <h2 class="page-title">Login</h2> }}
       <form class='form login-form'>
         <div class='form-group'>
-          <label for='user-login'>Username:</label>
-          <input class='form-input' type='text' id='user-login' />
+          <label for='email-login'>Email:</label>
+          <input class='form-input' type='text' id='email-login' />
         </div>
         <div class='form-group'>
           <label for='password-login'>Password:</label>
@@ -18,11 +17,14 @@
     </div>
 
     <div class='signup-card col-4'>
-      {{! <h2 class="page-title">Signup</h2> }}
       <form class='form signup-form'>
         <div class='form-group'>
           <label for='username-signup'>Username:</label>
           <input class='form-input' type='text' id='username-signup' />
+        </div>
+        <div class='form-group'>
+          <label for='email-signup'>Email:</label>
+          <input class='form-input' type='text' id='email-signup' />
         </div>
         <div class='form-group'>
           <label for='password-signup'>Password:</label>
