--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -7,7 +7,7 @@
   <form class='edit-post-form'>
     {{#if post.filename}}
       <div class='edit-form-image'>
-        <img src='https://project2-photo-storage.s3.us-east-2.amazonaws.com/{{post.filename}}' class='card-img' />
+        <img src='https://spicy-bites.s3.us-west-1.amazonaws.com/{{post.filename}}' class='card-img' />
       </div>
     {{/if}}
 
