--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
         {{#if filename}}
           <div>
             <img
-              src='https://project2-photo-storage.s3.us-east-2.amazonaws.com/{{filename}}'
+              src='https://spicy-bites.s3.us-west-1.amazonaws.com/{{filename}}'
               class='card-img'
             />
           </div>
