--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <img src='https://project2-photo-storage.s3.us-east-2.amazonaws.com/{{post.filename}}' />
+    <img src='https://spicy-bites.s3.us-west-1.amazonaws.com/{{post.filename}}' class='card-img' />
   </div>
 
   <div class='singlePostCreator'>
